--- a/src/style.scss
+++ b/src/style.scss
@@ -19,10 +19,11 @@
 
 .splitter{
     color: rgb(46, 80, 85);
-    font-size: 26px;
+    font-size: 15px;
+    margin-top: 20px;
     
-    &:nth-child(2){
-        margin-bottom: 60px;
+    h1:nth-child(2){
+        margin-bottom: 40px;
     }
 }
 
@@ -47,31 +48,66 @@
                 color: rgb(100, 109, 109)
             }
 
+            .people-value{
+                display: flex;
+                justify-content: space-between;
+
+                .people-error-value{
+                    color: rgb(245, 119, 73);
+                    display: none;
+
+                    &.error-appear{
+                        display: block;
+                    }
+                }
+            }
+
             .num-value{
                 width: 100%;
                 background-color: rgb(240, 239, 239);
                 display: flex;
                 justify-content: space-between;
-                padding: 5px;
+                padding: 2px;
                 border-radius: 5px;
                 margin-bottom: 15px;
                 margin-top: 5px;
 
-                h3{
-                    color: rgb(125, 139, 170);
+                &.error-orange-appear{
+                    border: 1px solid orangered;
                 }
 
+                .value-top{
+                    width: 90%;
+                    background-color: rgb(240, 239, 239);
+                    direction: ltr;
+                    border: none;
+                    outline: none;
+                    font-size: 20px;
+                    font-family: 'Space Mono', monospace;
+                    color: hsl(183, 100%, 15%);
+                    text-align: right;
+                }
+
+                h3{
+                    color: rgb(125, 139, 170);
+                    margin-left: 10px;
+                    font-size: 25px;
+                }
+                
                 img{
                     width: 15px;
-                    margin-left: 4px;
-                    margin-top: 2px;
-                    height: 25px;
+                    margin: 9px;
+                    height: 20px;
+                }
+
+                &:hover{
+                    border: 1px solid rgb(37, 203, 209);
                 }
             }
 
             .percent{
-                grid-template-columns: 1fr 1fr 1fr;
                 display: grid;
+                grid-template-columns: repeat(3, 120px);
                 margin-top: 5px;
                 margin-bottom: 15px;
 
@@ -93,11 +129,17 @@
                     &:nth-child(3){
                         margin-right: 0px;
                     }
+                    
+                    &:hover{
+                        background-color: hsl(172, 67%, 45%);
+                        color: hsl(183, 68%, 22%);
+                    }
                 }
 
                 .btn-custom{
                     padding: 12px;
                     margin: 10px;
+                    background-color: rgb(245, 245, 245);
                     margin-right: 0px;
                     border: none;
                     font-size: 20px;
@@ -105,6 +147,18 @@
                     font-family: 'Space Mono', monospace;
                     color: hsl(186, 14%, 43%);
                     cursor: pointer;
+                    direction: ltr;
+                    border: none;
+                    outline: none;
+                    text-align: right;
+
+                    &:hover{
+                        border: 1px solid hsl(172, 67%, 45%);
+                    }
+
+                    &::placeholder{
+                        margin-left: 5px;
+                    }
                 }
             }
         }
@@ -151,6 +205,110 @@
                     font-size: 20px;
                     margin-top: 20px;
                     cursor: pointer;
+
+                    &:hover{
+                        background-color: hsl(172, 67%, 45%);
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .calculator{
+        min-width: 740px;
+        
+        .content{
+            .calc-buttons{
+                .percent{
+                    grid-template-columns: repeat(3, 110px);
+                }
+            }
+        }
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+    h1:nth-child(1){
+        margin-top: 40px;
+    }
+
+    h1:nth-child(2){
+        margin-bottom: 30px !important;
+    }
+
+    .calculator{
+        width: 100%;
+        min-width: 0px;
+        min-height: 100vh;
+        
+        .content{
+            flex-direction: column;
+
+            .result-tip, .calc-buttons{
+                width: 100%;
+            }
+
+            .result-tip{
+                margin-left: 0px;
+
+                .tip-amount{
+                    .p-tip{
+                        
+                        h4{
+                            font-size: 19px;
+                        }
+
+                        p{
+                            font-size: 17px;
+                        }
+                    }
+
+                    h1{
+                        font-size: 35px;
+                    }
+                }
+            }
+
+            .calc-buttons{
+                
+                p{
+                    font-size: 19px;
+                }
+
+                .num-value{
+                    padding: 8px;
+                }
+
+                .percent{
+                    grid-template-columns: repeat(2, 1fr);
+
+                    .btn-custom{
+                        width: 95%;
+                        
+                        &::placeholder{
+                            text-align: center;
+                        }
+                    }
+
+                    .btn-green{
+                        width: 95%;
+
+                        &:nth-child(1){
+                            margin-left: 0px;
+                        }
+                        
+                        &:nth-child(4){
+                            margin-left: 10px;
+                        }
+    
+                        &:nth-child(3), &:nth-child(5){
+                            margin-left: 0px;
+                            margin-right: 10px;
+                        }
+                    }
                 }
             }
         }
